# sorting-hat

./: .gitignore  .pre-commit-config.yaml  README.md  cli.py  pyproject.toml  requirements.txt  setup.py
data/: answers.csv  questions.csv  weights.csv
docs/: api.rst  conf.py  index.rst  usage.rst
src/: print_house_ascii.py  select_items.py  sorting_hat.py
src/sorting_hat/: choose_variations.py  cli.py  print_house_ascii.py  sorting_hat.py
src/sorting_hat/data/: answers.csv  questions.csv  weights.csv
tests/sorting_hat/data/: test_data.py
tests/unit_tests/data/: test_data.py
