[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sorting-hat"
version = "1.1.0"
authors = [
  { name="thoera", email="erard.thomas@gmail.com" },
]
description = "Try the Sorting Hat to discover your house!"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "click",
  "questionary",
]

[project.optional-dependencies]
development = [
    "black",
    "pre-commit",
    "pytest",
    "sphinx-click",
    "sphinx",
    "tomli",
]

[project.scripts]
sorting-hat = "sorting_hat.cli:cli"

[project.urls]
"Homepage" = "https://github.com/thoera/sorting_hat"
"Bug Tracker" = "https://github.com/thoera/sorting_hat/issues"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-module = true
fail-under = 100
exclude = ["setup.py", "docs", "build"]
verbose = 2
color = true
omit-covered-files = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
cache_dir = ".cache"

[tool.ruff]
select = ["D", "E", "F"]
line-length = 88
cache-dir = ".cache"

[tool.ruff.per-file-ignores]
"setup.py" = ["D100"]
"__init__.py" = ["D104"]

[tool.ruff.pydocstyle]
convention = "google"
